--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="col-lg-6 hero-img-container">
 					<a href="./single.html">
 						<div class="hero-img">
-							<img src="./img/hero-img.png">
+							<img src="./img/hero-img.jpg">
 						</div>
 					</a>
 				</div>
@@ -66,13 +66,6 @@
 				<div class="col-lg-6">
 					<div class="hero-meta">
 						<p>Herself of that similar live good up which is are to for French endeavours, screen.</p>
-						<div class="author">
-							<div class="author-img"><img src="./img/author-img.png"></div>
-							<div class="author-meta">
-								<span class="author-name">Celeste Connell</span>
-								<span class="author-tag">Travel Blogger</span>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
