--- a/single.html
+++ b/single.html
@@ -58,7 +58,7 @@
 	  		<div class="col-lg-6 hero-img-container">
 	  			<div class="hero-img">
 	  				<!-- hero img -->
-	  				<img src="./img/hero-img-2.jpeg">
+	  				<img src="./img/hero-img2.jpg">
 	  			</div>
 	  		</div>	  		
 
@@ -67,26 +67,6 @@
 	  				<h1>I tighten my siddur, fail to someone else's</h1>
 	  			</div>
 
-	  		</div>
-	  		<!-- hero meta -->
-	  		<div class="col-lg-6">
-	  			<div class="hero-meta">
-	  				<div class="author">
-	  					<div class="author-img"><img src="./img/author-img.png"></div>
-	  					<div class="author-meta">
-	  					<span class="author-name">Celeste Connell</span>
-	  					<span class="author-tag">Travel Blogger</span>
-	  					</div>	
-	  				</div>
-	  				<span class="date mt-2">25th January, 2019</span>
-	  				<div class="tags mt-2">
-							<a href=""><span class="badge badge-pill p-2 badge-light">#Travel</span></a>
-							<a href="">
-							<span class="badge badge-pill p-2 badge-light">#Flight</span></a>
-							<a href="">
-							<span class="badge badge-pill p-2 badge-light">#Vlogger</span></a>
-	  				</div>
-	  			</div>
 	  		</div>
 	  	</div>
 	  </div>
