--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
 		integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./styles.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 	<title>Link Bio Instagram</title>
 </head>
 
@@ -20,26 +21,15 @@
 					aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<a class="navbar-brand" href="#"><img src="./img/logo.png"></a>
+				<a class="navbar-brand" href="#"><img src="./img/logo.png" alt="Logo"
+						style="width: 48px; height: 48px;"> Nails Designer</a>
 
 				<div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
 
-					<ul class="navbar-nav">
-						<li class="nav-item">
-							<a class="nav-link" href="#">Travel Tips</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Get Inspired</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link" href="#">Cheap Airfare</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link" href="#">About</a>
-						</li>
-					</ul>
+					<a href="https://wa.me/5599999999999" class="btn btn-success d-inline-flex align-items-center"
+						target="_blank">
+						<i class="bi bi-whatsapp me-2"></i>  Fale conosco
+					</a>
 				</div>
 			</div>
 		</nav>
@@ -58,14 +48,14 @@
 				<div class="col-lg-9">
 					<div class="hero-title">
 						<a href="./single.html">
-							<h1>To theory equation, more have the or to was the</h1>
+							<h1>💜 Conheça nosso salão</h1>
 						</a>
 					</div>
 				</div>
 
 				<div class="col-lg-6">
 					<div class="hero-meta">
-						<p>Herself of that similar live good up which is are to for French endeavours, screen.</p>
+						<p>Alongamentos, nail art e cuidado com suas unhas em um só lugar.</p>
 					</div>
 				</div>
 			</div>
@@ -281,4 +271,5 @@
 		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 		crossorigin="anonymous"></script>
 </body>
+
 </html>
